# AgenticAI

./: README.md  docker-compose.yaml  langgraph.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  setup.sh
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
app/core/: engine.py  state.py
app/schemas/: artifact.py  task.py
app/services/mcp/: mcp.client.py
app/subgraphs/analyst/: analyst.py
app/subgraphs/planning/: logic.py  orchestrator.py  plan_validator.py  query_validator.py
app/subgraphs/quantitative/: quant.py
app/subgraphs/research/: node.py
app/subgraphs/vector_db/: vector_db.py
lg/: Dockerfile  main.py  requirements.txt
lg/app/core/: engine.py  state.py
lg/app/schemas/: api.py  artifact.py  task.py
lg/app/services/langgraph_postgres/: checkpointer.py
lg/app/services/mcp/: mcp_client.py  mcp_clients.py
lg/app/subgraphs/analyst/: analyst.py
lg/app/subgraphs/orchestration/: plan_validator.py  planner.py  query_validator.py  scheduler.py
lg/app/subgraphs/planning/: logic.py  orchestrator.py  plan_validator.py  query_validator.py
mcp_servers/quant_sandbox/: Dockerfile  server.py
mcp_servers/search/: Dockerfile  server.py
mcp_servers/web_search/: research_server.py
notebooks/: graph.ipynb  planning.ipynb
notebooks/.ipynb_checkpoints/: planning-checkpoint.ipynb
shared-artifacts/final_report/run_755604a8/: final_report.md
shared-artifacts/run_f362f862/: script.py
tests/: test_graph.py
(+7 files in other folders)
