# [build-system]
# # Tells Python how to build your project
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [project]
# name = "my-cool-app"
# version = "0.1.0"
# description = "A web scraper built with Flask"
# readme = "README.md"
# requires-python = ">=3.9"
# authors = [
#     { name = "Your Name", email = "you@example.com" }
# ]

# # --- This replaces requirements.txt ---
# dependencies = [
#     "flask>=3.0.0",
#     "requests==2.31.0",
#     "pandas",
# ]

# [project.optional-dependencies]
# # Replaces 'requirements-dev.txt'
# dev = [
#     "pytest",
#     "black",
# ]

# [tool.black]
# line-length = 88
